# VoxelEarth

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
3dtiles-dl-master/: combine_glb.py  cuda_voxelizer  magic.js  package-lock.json  package.json  rotateUtils.js  server.js  threaded_api.py
3dtiles-dl-master/blender/: combiner_ops.py  type_annotations.py
3dtiles-dl-master/public/: index.html
ObjToSchematic/: addUnlit.js  analytics.d.ts  analytics.js  app_context.d.ts  app_context.js  atlas.d.ts  atlas.js  block_assigner.d.ts  block_assigner.js  block_atlas.d.ts  block_mesh.d.ts  block_mesh.js  bounds.d.ts  bounds.js  buffer.d.ts  buffer.js  camera.d.ts  camera.js  colour.d.ts  colour.js  config.d.ts  config.js  constants.d.ts  constants.js  cuda_voxelizer  cuda_voxelizerOld  dither.d.ts  dither.js  event.d.ts  event.js  geometry.d.ts  geometry.js  lighting.d.ts  lighting.js  linear_allocator.d.ts  linear_allocator.js  localiser.d.ts  localiser.js  magic.js  magicTest.js  (+52 more)
ObjToSchematic/exporters/: base_exporter.d.ts  base_exporter.js  exporters.d.ts  exporters.js  indexed_json_exporter .d.ts  indexed_json_exporter .js  litematic_exporter.d.ts  litematic_exporter.js  nbt_exporter.d.ts  nbt_exporter.js  schem_exporter.d.ts  schem_exporter.js  schematic_exporter.d.ts  schematic_exporter.js  uncompressed_json_exporter.d.ts  uncompressed_json_exporter.js
ObjToSchematic/importers/: base_importer.d.ts  base_importer.js  gltf_loader.d.ts  gltf_loader.js  importers.d.ts  importers.js  obj_importer.d.ts  obj_importer.js
ObjToSchematic/loc/: base.d.ts  base.js  base.js.map  en_GB.d.ts  en_GB.js  en_GB.js.map  en_US.d.ts  en_US.js  en_US.js.map  fr_FR.d.ts  fr_FR.js  fr_FR.js.map  ja_JP.d.ts  ja_JP.js  ja_JP.js.map  ru_RU.d.ts  ru_RU.js  ru_RU.js.map  zh_CN.d.ts  zh_CN.js  zh_CN.js.map
ObjToSchematic/res/: block_ids.d.ts  block_ids.js  block_ids.js.map
ObjToSchematic/src/: analytics.js  analytics.js.map  app_context.js  app_context.js.map  app_context.ts  atlas.js  atlas.js.map  atlas.ts  block_assigner.js  block_assigner.js.map  block_atlas.js  block_atlas.js.map  block_mesh.js  block_mesh.js.map  block_mesh.ts  bounds.js  bounds.js.map  buffer.js  buffer.js.map  camera.js  camera.js.map  camera.ts  colour.js  colour.js.map  colour.ts  config.js  config.js.map  config.ts  constants.js  constants.js.map  constants.ts  convertToGLB.js  dither.js  dither.js.map  dither.ts  event.js  event.js.map  event.ts  geometry.js  geometry.js.map  (+67 more)
ObjToSchematic/tools/: build-atlas.js  build-atlas.js.map  headless-config.js  headless-config.js.map  headless-config.ts  misc.js  (+5 more)
cuda_voxelizer/: CMakeLists.txt  README.md  build.sh
cuda_voxelizer/src/: debug.h  main.cpp  util.h  util_cuda.cpp  util_cuda.h  util_io.cpp  util_io.h  voxelize - OriginalSpottyColor.cu  voxelize.cu
cuda_voxelizer/src/libs/cuda/: helper_cuda.h
minecraft-plugin/: dependency-reduced-pom.xml  pom.xml
tiles3d-demo/: slides.js  state.jsx  vite.config.js
trimesh2/: copyFiles.sh
(+248 files in other folders)
